working on routing

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,9 @@
         <meta lang="en">
         <meta charset="UTF-8">
         <title>BURGERTIME</title>
+        <link rel='stylesheet' href='./normalize.css'>
+        <link rel='stylesheet' href="./skeleton.css">
+        
     </head>
     <body>
         {{{body}}}
