--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,24 @@
         <link rel='stylesheet' href="./skeleton.css">
         
     </head>
+    <header>
+        <div class='container'>
+            <div class='row'>
+                <h1>BURGERTIME</h1>
+            </div>
+        </div>
+        
+    </header>
     <body>
         {{{body}}}
+        <script type="text/javascript" href='./burger_logic.js'></script>
     </body>
+    <footer>
+        <div class='container'>
+            <div class='row'>
+                <h1>Ryan Mobley</h1>
+            </div>
+        </div>
+
+    </footer>
 </html>
