--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
 
                             {{this.id}}. {{this.burger_name}}
 
-                            <button burger-id="{{this.id}}" class="devour-burger">Devour-it!</button>
+                            <button data-id="{{this.id}}" data-state="{{this.eaten}}" class="devour-burger">Devour-it!</button>
                         </p>
                     </li>
                     {{/unless}}
@@ -29,7 +29,7 @@
 
                             {{this.id}}. {{this.burger_name}}
 
-                            <button burger-id="{{this.id}}" class="devour-burger">Devour-it!</button>
+                            <button burger-id="{{this.id}}" class="make-burger">Cook-it!</button>
                         </p>
                     </li>
                     {{/if}}
@@ -39,6 +39,7 @@
         </div>
     </div>
     <div class='row'>
+        <button id="new-burger">add a burger</button>
 
     </div>
 </div>
