--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta lang="en">
-        <meta charset="UTF-8">
-        <title>BURGERTIME</title>
-        <link rel='stylesheet' href='./normalize.css'>
-        <link rel='stylesheet' href="./skeleton.css">
-        
-    </head>
+
+<head>
+    <meta lang="en">
+    <meta charset="UTF-8">
+    <title>BURGERTIME</title>
+    <link rel='stylesheet' href='./normalize.css'>
+    <link rel='stylesheet' href="./skeleton.css">
+
+</head>
+
+<body>
     <header>
         <div class='container'>
             <div class='row'>
                 <h1>BURGERTIME</h1>
             </div>
         </div>
-        
+
     </header>
-    <body>
-        {{{body}}}
-        <script type="text/javascript" href='./burger_logic.js'></script>
-    </body>
+    {{{body}}}
     <footer>
         <div class='container'>
             <div class='row'>
@@ -28,4 +28,9 @@
         </div>
 
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src='./burger_logic.js'></script>
+</body>
+
 </html>
