made new burger page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 
                             {{this.id}}. {{this.burger_name}}
 
-                            <button burger-id="{{this.id}}" class="make-burger">Cook-it!</button>
+                            <button data-id="{{this.id}}" data-state="{{this.eaten}}" class="devour-burger">Cook-it!</button>
                         </p>
                     </li>
                     {{/if}}
