working on new burger form

--- a/views/newForm.handlebars
+++ b/views/newForm.handlebars
@@ -33,7 +33,7 @@
                 </select>
             </div>
         </div>
-        <input class="button-primary" id='more-toppings' type="button" value="&#43" data-topCount='0'>
+        <input class="button-primary" id='more-toppings' type="button" value="&#43" data-topCount="0">
         <input class="button-primary" id='submit-burger' type="submit" value="Submit">
     </form>
 </div>
