--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <title>BURGERTIME</title>
     <link rel='stylesheet' href='./normalize.css'>
     <link rel='stylesheet' href="./skeleton.css">
+    <link rel='stylesheet' href="./style.css">
 
 </head>
 
