--- a/views/newForm.handlebars
+++ b/views/newForm.handlebars
@@ -23,7 +23,7 @@
             </div>
             <div class='six columns' id='topping-list'>
                 <label for="ingredient">Select Toppings</label>
-                <select class="u-full-width" class="ingredient" id='topping-0'>
+                <select class="u-full-width ingredient" id='topping-0'>
                     <option value="Option 1">Pickles</option>
                     <option value="Option 2">Onions</option>
                     <option value="Option 3">Red Onions</option>
@@ -34,6 +34,7 @@
             </div>
         </div>
         <input class="button-primary" id='more-toppings' type="button" value="&#43" data-topCount="0">
+        <input class="button-primary" id='go-back' type="button" value="Back">
         <input class="button-primary" id='submit-burger' type="submit" value="Submit">
     </form>
 </div>
