can add new burger to db

--- a/views/newForm.handlebars
+++ b/views/newForm.handlebars
@@ -4,19 +4,19 @@
             
             <div class="six columns">
                 <label for="pattys">How many patties?</label>
-                <select class="u-full-width" id="pattys">
-                    <option value="Option 1">Single</option>
-                    <option value="Option 2">Double</option>
-                    <option value="Option 3">Triple</option>
-                    <option value="Option 4">Mega</option>
-                    <option value="Option 5">Double Mega</option>
+                <select class="u-full-width the-meats" id="pattys">
+                    <option value="Single">Single</option>
+                    <option value="Double">Double</option>
+                    <option value="Triple">Triple</option>
+                    <option value="Mega">Mega</option>
+                    <option value="Double Mega">Double Mega</option>
                     
                 </select>
                 <label for="cheese">What Kind of Cheese?</label>
-                <select class="u-full-width" id="cheese">
-                    <option value="Option 1">Burger</option>
-                    <option value="Option 2">Cheese Burger</option>
-                    <option value="Option 3">Extra Cheesey Burger</option>
+                <select class="u-full-width the-meats" id="cheese">
+                    <option value="Burger">Burger</option>
+                    <option value="Cheese Burger">Cheese Burger</option>
+                    <option value="Extra Cheesey Burger">Extra Cheesey Burger</option>
                 </select>
 
                 
@@ -24,17 +24,17 @@
             <div class='six columns' id='topping-list'>
                 <label for="ingredient">Select Toppings</label>
                 <select class="u-full-width ingredient" id='topping-0'>
-                    <option value="Option 1">Pickles</option>
-                    <option value="Option 2">Onions</option>
-                    <option value="Option 3">Red Onions</option>
-                    <option value="Option 4">Peppers</option>
-                    <option value="Option 5">Mushrooms</option>
-                    <option value="Option 6">Avocado</option>
+                    <option value="Pickle">Pickles</option>
+                    <option value="Onion">Onions</option>
+                    <option value="Red Onion">Red Onions</option>
+                    <option value="Pepper">Peppers</option>
+                    <option value="Mushroom">Mushrooms</option>
+                    <option value="Avocado">Avocado</option>
                 </select>
             </div>
         </div>
         <input class="button-primary" id='more-toppings' type="button" value="&#43" data-topCount="0">
         <input class="button-primary" id='go-back' type="button" value="Back">
-        <input class="button-primary" id='submit-burger' type="submit" value="Submit">
+        <input class="button-primary" id='submit-burger' type="button" value="Submit">
     </form>
 </div>
