--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,8 @@
-<div class='container'>
+<div class='container main-content'>
+    <div class='row'>
+        <button id="new-burger">add a burger</button>
+
+    </div>
     <div class='row burger-container'>
         <div class="six columns">
             <div id='Burger-menu'>
@@ -7,14 +11,9 @@
         </div>
         <div class="six columns">
             <div id='Burger-bin'>
-                <ul>
-                    
-                </ul>
+                
             </div>
         </div>
     </div>
-    <div class='row'>
-        <button id="new-burger">add a burger</button>
-
-    </div>
+    
 </div>
