--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
 <div class='container main-content'>
     <div class='row'>
+        <h1 class='body-title'>Pick a Burger!</h1>
         <button id="new-burger">add a burger</button>
 
     </div>
