--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,10 @@
     <meta lang="en">
     <meta charset="UTF-8">
     <title>BURGERTIME</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel='stylesheet' href='./normalize.css'>
     <link rel='stylesheet' href="./skeleton.css">
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
     <link rel='stylesheet' href="./style.css">
 
 </head>
@@ -15,7 +17,7 @@
     <header>
         <div class='container'>
             <div class='row'>
-                <h1>BURGERTIME</h1>
+                <h1 class="head-title">BURGERTIME</h1>
             </div>
         </div>
 
