--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta lang="en">
     <meta charset="UTF-8">
     <title>BURGERTIME</title>
+    <link rel='icon' href='./burger_logo'>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel='stylesheet' href='./normalize.css'>
     <link rel='stylesheet' href="./skeleton.css">
