--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,11 +7,13 @@
     <div class='row burger-container'>
         <div class="six columns">
             <div id='Burger-menu'>
+                <img id="burger-pic" class="pics" src='./burger_icon' alt='burger'>
                 
             </div>
         </div>
         <div class="six columns">
             <div id='Burger-bin'>
+                <img id='burger-plate' class="pics" src='./burger_plate' alt='plate'>
                 
             </div>
         </div>
