worked on responsiveness

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
     <footer>
         <div class='container'>
             <div class='row'>
-                <h1>Ryan Mobley</h1>
+                <h3>Created By: Ryan Mobley</h3>
             </div>
         </div>
 
