--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -42,8 +42,14 @@ body{
     
    
 }
-
+/* buttons only style with ids (i think its something to do with skeleton) */
 #new-burger{
+    border-color: #000;
+    background-color:#ac3f37;
+    color: #FFFFFF;
+}
+
+.form-reader{
     border-color: #000;
     background-color:#ac3f37;
     color: #FFFFFF;
@@ -55,6 +61,7 @@ body{
     display: block;
     margin:1%;
 }
+
 header{
     overflow-x: hidden;
     text-align: justify;
@@ -89,10 +96,19 @@ header{
     text-align: justify;
     
 }
-.container{
-    
+.ingredient{
+    color:#000;
 }
+.the-meats{
+    color:#000;
+}
+option{
+    color: #000;
+}
+    
+
 footer{
+    text-align: center;
     overflow-x: hidden;
     border-top-style: ridge;
     border-top-width: 1%;
@@ -106,7 +122,10 @@ footer{
     background-color: #ED7459;
     
 }
-
+h3{
+    font-size:1em;
+    font-weight: bold; 
+}
 @keyframes slide-up {
     0% {
         opacity: 0;
@@ -119,16 +138,69 @@ footer{
     }
 }
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 320px) and (max-width: 480px){
+    html{
+        overflow: hidden;
+    }
+    *{
+        max-width:100%;
+        
+    }
+    body{
+        overflow-y:scroll;
+    }
+    header{
+        width:105%;
+    }
+    .head-title{
+        font-size:3em;
+    }
+    .body-title{
+        font-size:2em;
+    }
+    p{
+        font-size:1em;
+    }
+    .form-reader{
+        width:100%;
+    }
+    
+    
+}
+
 
 /* Larger than phablet */
-@media (min-width: 550px) {}
+@media (min-width: 490px) and (max-width: 780px){
+    html{
+        overflow-x:hidden;
+    }
+    header{
+        width:150%;
+        margin-left:0.06%;
+        
+    }
+    .head-title{
+        font-size:4em;
+
+    }
+    body{
+        
+        width:100%;
+    }
+    footer{
+        position: fixed;
+        bottom: 0;
+        margin-left:0.1%;
+        width:100%;
+    }
+}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) and (min-width: 1000px) {
+    
+    header{
+        width:100%;
+        margin-left:1%;
+    }
 
-/* Larger than desktop */
-@media (min-width: 1000px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+}
