--- a/views/newForm.handlebars
+++ b/views/newForm.handlebars
@@ -30,11 +30,12 @@
                     <option value="Pepper">Peppers</option>
                     <option value="Mushroom">Mushrooms</option>
                     <option value="Avocado">Avocado</option>
+                    <option value="Bacon">Bacon</option>
                 </select>
             </div>
         </div>
-        <input class="button-primary" id='more-toppings' type="button" value="&#43" data-topCount="0">
-        <input class="button-primary" id='go-back' type="button" value="Back">
-        <input class="button-primary" id='submit-burger' type="button" value="Submit">
+        <button class="form-reader" id='more-toppings' type="button" value="&#43" data-topCount="0">&#43</button>
+        <button class="form-reader" id='go-back' type="button" value="Back">Back</button>
+        <button class="form-reader" id='submit-burger' type="button" value="Submit">Submit</button>
     </form>
 </div>
