--- a/views/newForm.handlebars
+++ b/views/newForm.handlebars
@@ -34,7 +34,7 @@
                 </select>
             </div>
         </div>
-        <button class="form-reader" id='more-toppings' type="button" value="&#43" data-topCount="0">&#43</button>
+        <button class="form-reader" id='more-toppings' type="button" value="&#43" data-topCount="0">&#43 Add Topping</button>
         <button class="form-reader" id='go-back' type="button" value="Back">Back</button>
         <button class="form-reader" id='submit-burger' type="button" value="Submit">Submit</button>
     </form>
