--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -123,7 +123,7 @@ footer{
     padding: 1%;
     color: white;
     background-color: #ED7459;
-    position: absolute;
+    position: fixed;
     
 }
 h3{
