--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -143,8 +143,9 @@ h3{
 }
 /* Larger than mobile */
 @media (min-width: 320px) and (max-width: 480px){
-    html{
-        overflow: hidden;
+    body,html{
+        margin:0;
+        padding: 0;
     }
     *{
         max-width:100%;
@@ -175,8 +176,9 @@ h3{
 
 /* Larger than phablet */
 @media (min-width: 490px) and (max-width: 780px){
-    html{
-        overflow-x:hidden;
+    body,html{
+        margin:0;
+        padding: 0;
     }
     header{
         width:150%;
